# substrate-minimal

./: Cargo.toml  README.md
.github/workflows/: checks.yml  pages.yml  release.yml
.maintain/: release.sh
subcryptor/: Cargo.toml
subcryptor/src/: b64.rs  constant.rs  error.rs  keystore.rs  lib.rs  test.rs
subhasher/: Cargo.toml
subhasher/src/: lib.rs  test.rs
submetadatan/: Cargo.toml
submetadatan/src/: cmp.rs  error.rs  lib.rs  metadata.rs  minimal.rs
subrpcer/: Cargo.toml
subrpcer/src/: lib.rs
subrpcer/src/client/: mod.rs  r.rs  u.rs
subruntimer/src/: lib.rs
subspector/src/: lib.rs
substorager/: Cargo.toml
substorager/src/: lib.rs  test.rs
subversioner/src/: lib.rs
