[package]
authors.workspace    = true
description          = "Minimal implementation of Substrate crypto."
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "subcryptor"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[dependencies]
# crates.io
array-bytes      = { workspace = true }
base58           = { version = "0.2" }
base64           = { version = "0.21" }
blake2-rfc       = { version = "0.2" }
crypto_secretbox = { version = "0.1" }
scrypt           = { version = "0.11" }
ss58-registry    = { version = "1.46" }
thiserror        = { workspace = true }
