[package]
authors.workspace    = true
description          = "Minimal implementation of Substrate metadata."
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "submetadatan"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[features]
cmp = []

[dependencies]
# crates.io
array-bytes        = { workspace = true }
frame-metadata     = { version = "15.1" }
fxhash             = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info         = { workspace = true }
substorager        = { workspace = true }
thiserror          = { workspace = true }
